@@ -15,6 +15,7 @@ Version 1.0 to be released
 - Added CFileHelper::getMimeType and CFileHelper::getMimeTypeByExtension (Qiang)
 - Added COutputCache::varyByRoute (Qiang)
 - Added 'params' to HTML options that are used in CHtml methods (Qiang)
+- Added CDbConnection::emulatePrepare (Qiang)
 - Refactored UserIdentity generated by yiic webapp (Qiang)
 - Refactored CLinkPager (Qiang)
 - Refactored CFilter (Qiang)
